# SolanaRustEscrowEssentials

./: .gitignore  Cargo.toml  README.md
scripts/: README.md  package.json
scripts/src/: alice.ts  bob.ts  setup.ts  utils.ts
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
workflow/: escrow-workflow.md
